# MultiStream-Companion

./: .eslintrc.cjs  .gitignore  .prettierrc  AGENTS.md  LICENSE  README.md  generate_logo.py  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.svelte
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/chat/: kick.rs  mod.rs  twitch.rs
src-tauri/src/config/: mod.rs
src-tauri/src/obs/: mod.rs
src-tauri/src/services/: mod.rs  stream_info.rs
src/lib/: types.ts
src/lib/stores/: chat.svelte.ts
