[package]
name = "multistream-companion"
version = "0.1.0"
description = "MultiStream Companion — multichat, OBS remote, cross-platform title sync"
authors = ["IgnicionDev"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }
obws = { version = "0.15", features = ["builder", "events"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
